# rust-lints

./: Cargo.toml
collect_join/: Cargo.toml  README.md
collect_join/src/: lib.rs
collect_join/ui/: main.rs  main.stderr
empty_if/: Cargo.toml  README.md
empty_if/src/: lib.rs
empty_if/ui/: main.rs  main.stderr
long_path/: Cargo.toml  README.md
long_path/src/: lib.rs
long_path/ui/: main.rs  main.stderr
ok_is_some/: Cargo.toml  README.md
ok_is_some/src/: lib.rs
ok_is_some/ui/: main.rs  main.stderr
redundant_enum_variant/: Cargo.toml  README.md
redundant_enum_variant/src/: lib.rs  return_collector.rs
redundant_enum_variant/ui/: main.rs  main.stderr
