[package]
name = "collect_join"
version = "0.1.0"
authors = ["authors go here"]
description = "description goes here"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
dylint_linting = "5.0.0"

[dev-dependencies]
dylint_testing = "5.0.0"

[package.metadata.rust-analyzer]
rustc_private = true
