[package]
name = "ok_is_some"
version = "0.1.0"
authors = ["Zack Grannan"]
description = "Lint that checks for .ok().is_some() and suggests .is_ok() instead"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
dylint_linting = "5.0.0"

[dev-dependencies]
dylint_testing = "5.0.0"

[package.metadata.rust-analyzer]
rustc_private = true
