[package]
name = "redundant_enum_variant"
version = "0.1.0"
authors = ["authors go here"]
description = "description goes here"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
clippy_utils = { git = "https://github.com/rust-lang/rust", subdirectory = "src/tools/clippy", rev = "eda76d9d1d133effbf7facb28168fd78d75fd434" }
dylint_linting = "5.0.0"

[dev-dependencies]
dylint_testing = "5.0.0"

[package.metadata.rust-analyzer]
rustc_private = true
